INTERNSHIP-29: создание стажировки
