# internal/core/http/http.go
@@ -5,12 +5,34 @@ import (
 	"encoding/json"
 	"fmt"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
+	"io"
 	"log"
 	"net/http"
 	"os"
 	"path/filepath"
 	"time"
 )
+
+func ParseJSONBody(r *http.Request, data any) *APIError {
+	defer func() {
+		if err := r.Body.Close(); err != nil {
+			log.Printf("failed to close body reader: %v", err)
+		}
+	}()
+
+	body, err := io.ReadAll(r.Body)
+	if err != nil {
+		return &ErrInvalidBody
+	}
+
+	err = json.Unmarshal(body, data)
+	if err != nil {
+		log.Printf("failed to parse json: %v", err)
+		return &ErrInvalidBody
+	}
+
+	return nil
+}
 
 func respondJSON(w http.ResponseWriter, statusCode int, body any) {
 	w.Header().Set("Content-Type", "application/json")
@@ -28,16 +50,17 @@ func RespondSuccess(w http.ResponseWriter, statusCode int, data any) {
 
 // @title Internships API
 // @BasePath /api/v1
+// @OpenAPIVersion 3.0.1
 func NewServer(port int, mux *http.ServeMux) (*http.Server, error) {
 	if err := registerSwagger(mux); err != nil {
 		return nil, err
 	}
-	mux.HandleFunc("/", func(w http.ResponseWriter, req *http.Request) {
+	mux.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
 		RespondError(w, APIError{
 			StatusCode: http.StatusNotFound,
 			Error:      "NOT_FOUND",
 			Details: map[string]any{
-				"path": req.URL.Path,
+				"path": r.URL.Path,
 			},
 		})
 	})
