# internal/internship/infra/http/v1/routes.go
@@ -5,4 +5,5 @@ import "net/http"
 func RegisterRoutes(mux *http.ServeMux, h *Handler) {
 	mux.HandleFunc("GET /api/v1/internships", h.GetAll)
 	mux.HandleFunc("GET /api/v1/internships/{id}", h.GetByID)
+	mux.HandleFunc("POST /api/v1/admin/internships", h.Create)
 }
